load("//tools/base/bazel:maven.bzl", "maven_repo")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library", "kotlin_test", "kotlin_jar")

kotlin_library(
    name = "framework",
    srcs = ["src/main/java"],
    visibility = ["//tools/base/build-system/integration-test:__subpackages__"],
    deps = [
        "//tools/analytics-library/protos/src/main/proto",
        "//tools/apksig",
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework/src/main/proto",
        "//tools/base/build-system/java-lib-plugin/java-lib-model",
        "//tools/base/build-system/java-lib-plugin/java-lib-model-builder",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/instant-run:instant-run-client",
        "//tools/base/instant-run:instant-run-common",
        "//tools/base/layoutlib-api:tools.layoutlib-api",
        "//tools/base/repository:tools.repository",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testing-infrastructure/device-pool/device-provider",
        "//tools/base/testutils:tools.testutils",
        "//tools/base/third_party:com.google.apis_google-api-services-storage",
        "//tools/base/third_party:com.google.protobuf_protobuf-java",
        "//tools/base/third_party:com.google.protobuf_protobuf-java-util",
        "//tools/base/third_party:com.google.truth_truth",
        "//tools/base/third_party:commons-io_commons-io",  # TODO: remove?
        "//tools/base/third_party:commons-lang_commons-lang",  # TODO: remove?
        "//tools/base/third_party:org.jacoco_org.jacoco.agent",
        "//tools/base/third_party:org.jacoco_org.jacoco.core",
        "//tools/base/third_party:org.jacoco_org.jacoco.report",
        "//tools/base/third_party:org.ow2.asm_asm",
        "//tools/base/third_party:org.ow2.asm_asm-tree",
        "//tools/base/third_party:org.smali_dexlib2",
    ],
)

kotlin_test(
    name = "framework_tests",
    srcs = ["src/test/java"],
    jvm_flags = [
        "-Dtest.suite.jar=/framework_tests.jar",
    ],
    resources = glob(["src/test/resources/**"]),
    tags = ["no_test_windows"],  # b/77288863
    test_class = "com.android.testutils.JarTestSuite",
    visibility = ["//tools/base/build-system/integration-test:__subpackages__"],
    deps = [
        ":framework",
        "//tools/analytics-library/protos/src/main/proto",
        "//tools/apksig",
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework/src/main/proto",
        "//tools/base/build-system/java-lib-plugin/java-lib-model",
        "//tools/base/build-system/java-lib-plugin/java-lib-model-builder",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/repository:tools.repository",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testing-infrastructure/device-pool/device-provider",
        "//tools/base/testutils:tools.testutils",
        "//tools/base/third_party:com.google.apis_google-api-services-storage",
        "//tools/base/third_party:com.google.protobuf_protobuf-java",
        "//tools/base/third_party:com.google.protobuf_protobuf-java-util",
        "//tools/base/third_party:com.google.truth_truth",
        "//tools/base/third_party:org.mockito_mockito-core",
        "//tools/base/third_party:org.ow2.asm_asm",
        "//tools/base/third_party:org.ow2.asm_asm-tree",
        "//tools/base/third_party:org.smali_dexlib2",
    ],
)
